--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
-/* ------------------------------------------Colors */
+/*--------------------------------------------Colors*/
 
 .bg-color-name-title {
     background-color: #676767;
-
 }
 
 .bg-color-three-reasons {
@@ -13,6 +12,10 @@
 
 .bg-color-personal-info {
     background-color: #f4f4f4;
+}
+
+.bg-color-work-history {
+    background-color: #9b59b6;
 }
 
 .ui-menu-color-home {
@@ -31,7 +34,7 @@
     background-color: #525252;
 }
 
-/* ------------------------------------------Special paddings/margins/text */
+/* ----------------------------------------Special paddings/margins/text */
 
 h1,
 h2,
@@ -64,6 +67,7 @@ h4 {
     float: none;
 }
 
+.history-heading,
 .section-heading {
     font-family: "Exo", sans-serif;
     font-weight: 300;
@@ -71,7 +75,7 @@ h4 {
     margin-bottom: 40px;
 }
 
-/* ------------------------------------------Heading */
+/*--------------------------------------------Heading*/
 
 header {
     margin: 0;
@@ -117,13 +121,13 @@ header {
     font-size: 0;
 }
 
-#nav {
-    margin: 0;
-}
-
 #nav li {
     font-size: 14px;
     padding: 0;
+}
+
+#nav {
+    margin: 0;
 }
 
 .menuitem {
@@ -140,7 +144,7 @@ header {
 }
 
 .menuitem a i {
-    padding-top: 20px;
+    padding-top: 22px;
     display: block;
     color: #fafafa;
     font-size: 26px;
@@ -157,14 +161,14 @@ header {
     letter-spacing: 2px;
 }
 
-/* ------------------------------------------Hover.css */
+/*--------------------------------------------Hover.css*/
 
 .hvr-sweep-to-bottom:before {
     background: rgba(0, 0, 0, 0.2);
     height: 120px;
 }
 
-/* ------------------------------------------Footer */
+/* ----------------------------------------Footer */
 
 footer {
     background-color: #525252;
@@ -201,7 +205,7 @@ footer {
     line-height: 7px;
     text-align: center;
     color: #fafafa;
-    background-color: #8f8f8f;
+    background: #8f8f8f;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
@@ -216,7 +220,7 @@ footer {
     padding: 20px;
 }
 
-/* ------------------------------------------Three Reasons */
+/* ----------------------------------------Three Reasons */
 
 .three-reasons-icon {
     font-size: 26px;
@@ -227,7 +231,7 @@ footer {
     margin-bottom: 15px;
 }
 
-/* ------------------------------------------Personal Info */
+/* ----------------------------------------Personal Info */
 
 .personal-info-item {
     margin-bottom: 20px;
@@ -260,4 +264,75 @@ footer {
 .personal-info-item .value {
     position: relative;
     width: 60%;
+}
+
+/* ----------------------------------------Skills */
+
+.progress {
+    position: relative;
+    height: 25px;
+    margin-bottom: 4px;
+    line-height: normal;
+    font-size: 100%
+}
+
+.progress-type {
+    position: absolute;
+    left: 0px;
+    font-weight: 400;
+    padding: 3px 30px 2px 10px;
+    color: #fafafa;
+    background-color: rgba(25, 25, 25, 0.2);
+}
+
+.progress-section {
+    margin: 40px 20px;
+}
+
+/* ----------------------------------------Work History */
+
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
+}
+
+.timeline-item {
+    padding: 4em 2em 0em 2em;
+    position: relative;
+    color: #fafafa;
+    border-left: 1px solid;
+}
+
+.timeline-item p {
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:before {
+    content: attr(data-dates);
+    position: absolute;
+    left: 2.5em;
+    top: 3em;
+    display: block;
+    font-family: "Exo", sans-serif;
+    font-weight: 500;
+    font-size: 0.8em;
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:after {
+    width: 12px;
+    height: 12px;
+    display: block;
+    top: 2.4em;
+    position: absolute;
+    left: -6px;
+    border-radius: 12px;
+    content: '';
+    background-color: #fafafa;
+}
+
+.history-items {
+    margin-bottom: 30px;
 }
